[tool.poetry]
name = "garageidm"
version = "0.1.0"
description = "Identity Management for Garage businesses"
authors = ["Zabojnik, Tomas <t.zabojnik@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.8"
SQLAlchemy = "^2.0.28"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
